# OpenROAD-assistant

./: .gitignore  .gitmodules  Embedding-Mistral7B-OpenROAD.ipynb  GithubRAG.ipynb  MinimalRAG.ipynb  README.md  chat.py  chunk.py  embed.py  pyproject.toml  run_expts.sh  timer_utils.py  utils.py
austen/: Embedding-Mistral7B-Instruct.ipynb  Embedding.ipynb  README.md  pyproject.toml
austen/data/: Emma_1815.md  Juvenilia_1787.md  Lady_Susan_1871.md  Lesley_Castle_1792.md  Love_and_Friendship_1790.md  Mansfield_Park_1814.md  Northanger_Abbey_1818.md  Persuasion_1818.md  Pride_and_Prejudice_1813.md  Sense_and_Sensibility_1811.md  The_history_of_England_1791.md
chroma_db/21893cf4-ea90-4314-a8d9-642fa20a68fa/: index_metadata.pickle
evaluation/: 2024_01_03_15_43_56.json  Evaluation.ipynb  eval.csv  or.csv  or2.csv
notebooks/: GithubIssues.ipynb  GithubRAG.ipynb
tempdata/: data.jsonl
test/: OR_README.md
