[tool.poetry]
name = "openroad-assistant"
version = "0.1.0"
description = "OpenROAD chatbot"
authors = ["Jack Luar"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.326"
jupyter = "^1.0.0"
gitpython = "^3.1.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
