[tool.poetry]
name = "openroad-assistant"
version = "0.1.0"
description = "OpenROAD chatbot"
authors = ["Jack Luar"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.326"
jupyter = "^1.0.0"
gitpython = "^3.1.40"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
sentence-transformers = "^2.2.2"
chromadb = "^0.4.15"
llama-cpp-python = "^0.2.14"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
